--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <button onclick="document.location = 'reg.html'">Регистрация</button>
         <button onclick="document.location = 'log.html'">Войти</button>
     </div>
+    <br>
+    <p>Это изменение</p>
 </body>
 </html>
